--- a/css/index.css
+++ b/css/index.css
@@ -95,3 +95,6 @@ h1 {
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
+
+
+.ui-responsive thead th { font-size: 0.8em;}
