removed some bugs and un-needed code

--- a/css/homeworks.css
+++ b/css/homeworks.css
@@ -9,3 +9,9 @@ background-color:white;
 #homework-table {
 font-size:12px;
 }
+#assignment-table {
+font-size:12px;
+}
+#tests-table {
+font-size:12px;
+}
