changed size of table

--- a/css/homeworks.css
+++ b/css/homeworks.css
@@ -6,12 +6,12 @@
 background-color:white;
 }
 
-#homework-table {
+#null {
 font-size:12px;
 }
-#assignment-table {
+#null {
 font-size:12px;
 }
-#tests-table {
+#null {
 font-size:12px;
 }
