--- a/css/homeworks.css
+++ b/css/homeworks.css
@@ -16,5 +16,16 @@ font-size:12px;
 font-size:12px;
 }
 #submitbutton{
-background-color:snow;
+background-color:white;
+color:black;
+padding: 1rem;
+ position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+}
+#backbutton {
+background-color:white;
+color:black;
 }
