--- a/css/homeworks.css
+++ b/css/homeworks.css
@@ -8,11 +8,12 @@ background-color:white;
 
 
 #submitbutton {
- position:fixed;
-   bottom:0;
-   width:95%;
-   height:27px;
-text-align: center;   
+width: 100%;
+    height: 30px;
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;  
 }
 .overdue{
 color:red;
@@ -37,7 +38,4 @@ font-weight: bold;
 #Tests-table{
 font-size:15px;
 font-weight: bold;
-}
-.HomeWorkTab{
-background-color:blue;
 }
