--- a/css/homeworks.css
+++ b/css/homeworks.css
@@ -12,8 +12,10 @@ width: 100%;
     height: 30px;
     position: fixed;
     bottom: 0px;
-    left: 0px;
-    right: 0px;  
+    left: -5px;
+    right: -5px;
+	text-align: center;
+
 }
 .overdue{
 color:red;
